src/test/resources/frontendReference/invalid/syntaxErr/pairs/badLookup01.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 13:10 -- no viable alternative at input 'fst'
1 parser error(s) detected, no further compilation attempted.
